namespace MediaRatingsPlatform.Models;

public class Like
{
    public int? LikeId { get; set; }
    public string? UserId { get; set; }
    public int? RatingId { get; set; }
}
