namespace MediaRatingsPlatform.Models;

public class Token
{
    public string? Id { get; set; }
    public string? User { get; set; }
    public string? ValidUntil { get; set; }
}
