// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// https://dbdiagram.io/d

Table users {
  username string [primary key]
  password string [not null]
  favouriteGenre string
}

Table tokens {
  token string [primary key]
  user string [ref:- users.username, not null]
  validuntil timestamp [not null]
}

Table media {
  id int [primary key]
  owner string [ref: > users.username, not null]
  title string
  description string
  type mediaType [note: 'movie, series or game']
  releaseYear int
  genre string
  ageRestriction int
}

Table favourites {
  id int [primary key]
  userId string [ref: > users.username, not null]
  mediaId int [ref: > media.id, not null]
}

Table ratings {
  id int [primary key]
  userId string [ref: > users.username, not null]
  mediaId int [ref: > media.id, not null]
  created_at timestamp [not null]
  stars int [not null]
  comment string [not null]
  commentVisible bool [not null]
}

Table likes {
  id int [primary key]
  userId string [ref: > users.username, not null]
  ratingId int [ref: > ratings.id, not null]
}
